--- a/index.html
+++ b/index.html
@@ -5,33 +5,38 @@
 	<title>Waitstaff Calc</title>
     <link type="text/css" rel="stylesheet" href="./reset.css">
     <link type="text/css" rel="stylesheet" href="./main.css">
+    <script src="./jquery-2.1.1.min.js" type="text/javascript"></script>
     <script src="./angular.min.js" type="text/javascript"></script>
     <script src="./waitstaff.js" type="text/javascript"></script>
 </head>
-<body>
+<body ng-controller='waitstaffCtrl'>
     <div class="container">
         <h1>Waitstaff Calculator</h1> 
         <section id="meal">
             <h4>Enter the Meal Details</h4>
             <div class="divider"></div>
-            <form>
+            <form ng-controller="mealFormCtrl" ng-submit="submit()" name="mealForm" novalidate>
                 <table>
                     <tr>
-                        <td>Base Meal Price: $</td>
-                        <td><input type="text" id="bmp" ng-model="bmp"></td>
+                        <td class="textcol">Base Meal Price: $</td>
+                        <td><input type="number" id="bmp" ng-model="data.bmp" required></td>
                     </tr>
                     <tr>
-                        <td>Tax Rate %</td>
-                        <td><input type="text" id="taxRate" ng-model="taxRate"></td>
+                        <td class="textcol">Tax Rate: %</td>
+                        <td><input type="number" id="taxRate" ng-model="data.taxRate" required></td>
                     </tr>
                     <tr>
-                        <td>Tip Percentage %</td>
-                        <td><input type="text" id="tip" ng-model="tip"></td>
+                        <td class="textcol">Tip Percentage: %</td>
+                        <td><input type="number" id="tip" ng-model="data.tipPcnt" required></td>
                     </tr>
                 </table>
+                <p class="showError" ng-if="submitted && error==='number'">
+                   Please enter numbers in all fields</p>
+                <p class="showError" ng-if="submitted && error==='required'">
+                   Please fill in all fields</p>
                 <center>
                     <button type="submit">Submit</button>
-                    <button type="button">Cancel</button>
+                    <button type="button" ng-click="resetForm()">Cancel</button>
                 </center>
             </form>
         </section>
@@ -41,16 +46,16 @@
                 <div class="divider"></div>
                 <table>
                     <tr>
-                        <td>Subtotal:</td>
-                        <td>${{subtotal}}</td>
+                        <td class="textcol">Subtotal:</td>
+                        <td>${{subtotal|number:2}}</td>
                     </tr>
                     <tr>
-                        <td class="bottom-border">Tip:</td>
-                        <td class="bottom-border">${{tip}}</td>
+                        <td class="textcol bottom-border">Tip:</td>
+                        <td class="bottom-border">${{tip|number:2}}</td>
                     </tr>
                     <tr>
-                        <td>Total</td>
-                        <td>${{total}}</td>
+                        <td class="textcol">Total:</td>
+                        <td>${{total|number:2}}</td>
                     </tr>
                 </table>
                 <!--<p>Subtotal: ${{subtotal}}</p>-->
@@ -63,22 +68,23 @@
                 <div class="divider"></div>
                 <table>
                     <tr>
-                        <td>Tip Total:</td>
-                        <td>${{tipTotal}}</td>
+                        <td class="textcol">Tip Total:</td>
+                        <td>${{tipTotal|number:2}}</td>
                     </tr>
                     <tr>
-                        <td>Meal Count</td>
-                        <td>${{mealCount}}</td>
+                        <td class="textcol">Meal Count:</td>
+                        <td>{{mealCount|number:0}}</td>
                     </tr>
                     <tr>
-                        <td>Average Tip Per Meal:</td>
-                        <td>${{avgTPM}}</td>
+                        <td class="textcol">Average Tip Per Meal:</td>
+                        <td>${{avgTPM|number:2}}</td>
                     </tr>
                 </table>
                 <!--<p class="tipTotal">Tip Total: ${{tipTotal}}</p>-->
                 <!--<p class="mealCount">Meal Count: ${{mealCount}}</p>-->
                 <!--<p>Average Tip Per Meal: ${{avgTPM}}</p>-->
             </section>
+            <button id="resetBtn" type="button" ng-click="resetCalc()">Reset</button>
         </div>
     </div>
 </body>
