--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Waitstaff Calc</title>
-    <link type="text/css" rel="stylesheet" href="./reset.css">
-    <link type="text/css" rel="stylesheet" href="./main.css">
+    <link href="./reset.css" rel="stylesheet" type="text/css">
+    <link href="./main.css"  rel="stylesheet" type="text/css">
     <script src="./jquery-2.1.1.min.js" type="text/javascript"></script>
     <script src="./angular.min.js" type="text/javascript"></script>
     <script src="./waitstaff.js" type="text/javascript"></script>
@@ -58,10 +58,6 @@
                         <td>${{total|number:2}}</td>
                     </tr>
                 </table>
-                <!--<p>Subtotal: ${{subtotal}}</p>-->
-                <!--<p class="tip">Tip: ${{tip}}</p>-->
-                <!--<div class="totaldivider"></div>-->
-                <!--<p class=total>Total ${{total}}</p>-->
             </section>
             <section id="earnings" ng-controller="earningsCtrl">
                 <h4>My Earnings Info</h4>
@@ -80,9 +76,6 @@
                         <td>${{avgTPM|number:2}}</td>
                     </tr>
                 </table>
-                <!--<p class="tipTotal">Tip Total: ${{tipTotal}}</p>-->
-                <!--<p class="mealCount">Meal Count: ${{mealCount}}</p>-->
-                <!--<p>Average Tip Per Meal: ${{avgTPM}}</p>-->
             </section>
             <button id="resetBtn" type="button" ng-click="resetCalc()">Reset</button>
         </div>
